# pickpack

./: CMakeLists.txt  README.md  package.xml
Mask_RCNN/: README.md
Mask_RCNN/process_image/: README.md
arduino_takktile/: arduino_takktile.ino
mrcnn/: model (copy).py  model.py  visualize.py
msg/: blister_pose.msg
samples/.ipynb_checkpoints/: demo-checkpoint.ipynb  demo1-checkpoint.ipynb  demo_blister (copy)-checkpoint.ipynb  demo_blister-checkpoint.ipynb  demo_blister_test-checkpoint.ipynb  instance_segmentation-checkpoint.ipynb
samples/blister/: blister_mul_class.py
scripts/: frame_transform.py  opening_boxlid.ipynb  picking_acrylic_board.ipynb  picking_acrylic_board_with_3finger_gripper.ipynb  picking_book.ipynb  picking_carton.ipynb  tilt_and_pivot_with_sensing.ipynb
scripts/.ipynb_checkpoints/: Ex1_depth_estimation-checkpoint.ipynb  Ex1_no_sensor_estimate-checkpoint.ipynb  Ex2_no_tilt-checkpoint.ipynb  Ex3_gripper_sensor-checkpoint.ipynb  opening_boxlid-checkpoint.ipynb  picking_acrylic_board-checkpoint.ipynb  picking_acrylic_board_with_3finger_gripper-checkpoint.ipynb  picking_book-checkpoint.ipynb  picking_carton-checkpoint.ipynb  real_time_image-checkpoint.ipynb  send_image-checkpoint.ipynb  stereo_calibration-checkpoint.ipynb  testEx1-checkpoint.ipynb  test_camera_detection-checkpoint.ipynb  thin_object_bin_pick_mani-checkpoint.ipynb
tilt_pivot_collision_check/: README.md  package.xml
tilt_pivot_collision_check/config/: ur10_gripper_c_xacro.srdf
tilt_pivot_collision_check/launch/: default_warehouse_db.launch  gazebo_planning_execution.launch  moveit_rviz.launch  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  warehouse.launch
tilt_pivot_collision_check/scripts/: arc_rotate.py  tilt_pivot_collision_check.py
ur_tilt_pivot_collision_check/: CMakeLists.txt  README.md
ur_tilt_pivot_collision_check/config/: controllers.yaml  joint_names.yaml
(+30 files in other folders)
